vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-29.snap
---
source: src/lexer/test.rs
expression: "lex(\"Parameter\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 9,
            },
            kind: Parameter,
        },
    ],
)
