vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-3.snap
---
source: src/lexer/test.rs
expression: "lex(\"Sub\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: Sub,
        },
    ],
)
