vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-32.snap
---
source: src/lexer/test.rs
expression: "lex(\"Returns\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 7,
            },
            kind: Returns,
        },
    ],
)
