vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-35.snap
---
source: src/lexer/test.rs
expression: "lex(\"Argument\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 8,
            },
            kind: Argument,
        },
    ],
)
