vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-36.snap
---
source: src/lexer/test.rs
expression: "lex(\"Arguments\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 9,
            },
            kind: Arguments,
        },
    ],
)
