vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-37.snap
---
source: src/lexer/test.rs
expression: "lex(\"And\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: And,
        },
    ],
)
