vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-38.snap
---
source: src/lexer/test.rs
expression: "lex(\"Go\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 2,
            },
            kind: Go,
        },
    ],
)
