vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-39.snap
---
source: src/lexer/test.rs
expression: "lex(\"Sleep\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 5,
            },
            kind: Sleep,
        },
    ],
)
