vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-4.snap
---
source: src/lexer/test.rs
expression: "lex(\"Mul\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: Mul,
        },
    ],
)
